# Ai

./: .env.example  .gitignore  ARCHITECTURE_FREEZE_REPORT.md  ARCHITECTURE_RUNTIME_AUDIT.md  AUDIT_REPORT.txt  CALL_FLOW_INTEGRATION.md  CHANGELOG.md  COMPLETE_VERIFICATION_REPORT.md  CONSOLIDATION_REPORT.md  Dockerfile  FINAL_AUDIT_REPORT.md  FINAL_ENGINEERING_AUDIT_REPORT.md  FINAL_RUNTIME_IMPLEMENTATION_AUDIT.md  FINAL_VERIFICATION_AUDIT_REPORT.md  FINAL_VERIFICATION_REPORT.txt  HAJEEN_COMPLETE_ARCHITECTURE_DOCUMENTATION.md  INTEGRATION_PROOF_REPORT.md  LEGACY_COMPONENT_AUDIT.md  MEMORY_UNIFICATION_FINAL_REPORT.md  MEMORY_UNIFICATION_REPORT.md  MIGRATION_PLAN.md  PHASES_19_20_REPORT.md  PHASE_10_PRODUCTION_AI_PLATFORM.md  PHASE_1_2_DEVELOPMENT.md  PHASE_1_2_REPORT.md  PHASE_1_CLOSURE_FINAL_REPORT.md  PHASE_1_CLOSURE_REPORT.md  PHASE_1_DISTRIBUTED_INFERENCE.md  PHASE_1_SELF_REFLECTION_CRITIQUE_ENGINE.md  PHASE_2_ADVANCED_AGENT_FRAMEWORK.md  PHASE_2_EPISODIC_EXPERIENCE_MEMORY.md  PHASE_3_ALIGNMENT_RLHF_INFRASTRUCTURE.md  PHASE_3_CURIOSITY_EXPLORATION_ENGINE.md  PHASE_3_REPORT.md  PHASE_4_5_6_REPORT.md  PHASE_4_CONTINUOUS_SELF_IMPROVEMENT_LOOP.md  PHASE_4_DISTRIBUTED_EXECUTION_MONITORING.md  PHASE_6_MULTI_AGENT.md  PHASE_7_8_REPORT.md  PHASE_7_EVALUATION_INFRASTRUCTURE.md  (+40 more)
hajeen_platform/: .gitignore  ARCHITECTURE_UPDATE_REPORT.md  COMPREHENSIVE_ENGINEERING_REPORT.md  ENGINEERING_REPORT.md  ENGINEERING_REVIEW_REPORT.md  FINAL_ENGINEERING_REPORT.md  FINAL_ENGINEERING_VERIFICATION.md  Makefile  PRODUCTION_ENGINEERING_REPORT.md  README.md  ai_core_stability_report.md  (+9 more)
(+966 files in other folders)
