[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.ruff]
line-length = 88
target-version = "py311"
select = ["E", "F", "I"]
fix = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
pythonpath = ["."]
addopts = "-v"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "planning-engine"
version = "1.0.0"
description = "Planning Engine for Hajeen Platform"
requires-python = ">=3.11"
dependencies = ["pyyaml", "structlog"]

[tool.setuptools.packages.find]
where = ["."]
include = ["planning_engine*"]
exclude = ["tests*"]
